# sattl

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  setup.cfg  setup.py
.github/workflows/: config.json.sample  config.yml  run-sattl-tests.yml  tests-and-docker-image.yml  tests-and-docker-images.yml
sattl/: README.md  __init__.py  cli.py  config.py  logger.py  retry_with_timeout.py  salesforce.py  test_case.py  test_step.py
sattl/salesforce/: __init__.py  connection.py  constants.py  external_id.py  object.py  relation.py
tests/unit/: conftest.py  test_cli.py  test_config.py  test_retry.py  test_salesforce.py  test_test_assert.py  test_test_case.py  test_test_step.py
tests/unit/salesforce/: common.py  test_connection.py  test_external_id.py  test_object.py  test_relation.py
