# Configuration that used to live here has moved to tox.ini

[metadata]
name = sattl
url = https://github.com/2uinc/sattl

[options]
packages = find:
python_requires = >=3.8, <3.9
install_requires =
    setuptools >= 41.2, < 54.1.1
    click == 8.0.1

[options.packages.find]
where = sattl

[options.extras_require]
testing =
    ipython == 7.22.0
    mock == 2.0.0
    pytest == 6.2.3

dev =
    ipython

[bdist_wheel]
universal = 1