# Configuration that used to live here has moved to tox.ini

[metadata]
name = sattl
url = https://github.com/cscetbon/sattl

[options]
packages = find:
python_requires = >=3.11, <3.13
install_requires =
    setuptools >= 68.0.0, < 70.0.0
    click == 8.2.1
    simple_salesforce == 1.12.6
    python-json-logger == 3.3.0
    PyYAML == 6.0.2

[options.packages.find]
where = sattl

[options.extras_require]
testing =
    ipython == 9.4.0
    mock == 5.2.0
    pytest == 8.4.1
    httmock == 1.4.0
    PyYAML == 6.0.2

dev =
    ipython

[bdist_wheel]
universal = 1
